packages/macros/src/tests/snapshots/openzeppelin_macros__tests__test_type_hash__basic_types_enum.snap
---
source: src/tests/test_type_hash.rs
expression: result
snapshot_kind: text
---
TokenStream:

pub enum MyEnum {
    Variant1: felt252,
    Variant2: bool,
    #[snip12(kind: "string")]
    Variant3: ByteArray,
    Variant4: ClassHash,
    Variant5: ContractAddress,
    Variant6: u128,
    Variant7: i128,
    #[snip12(kind: "shortstring")]
    Variant8: felt252,
    #[snip12(kind: "timestamp")]
    Variant9: u128,
    #[snip12(kind: "selector")]
    Variant10: felt252,
}
pub fn __MY_ENUM_encoded_type() {
    println!(
        "\"MyEnum\"(\"Variant1\"(\"felt\"),\"Variant2\"(\"bool\"),\"Variant3\"(\"string\"),\"Variant4\"(\"ClassHash\"),\"Variant5\"(\"ContractAddress\"),\"Variant6\"(\"u128\"),\"Variant7\"(\"i128\"),\"Variant8\"(\"shortstring\"),\"Variant9\"(\"timestamp\"),\"Variant10\"(\"selector\"))",
    );
}
pub const MY_ENUM_TYPE_HASH: felt252 =
    0xffb082ec5e50d2c1dedfc7ed49002b1a280a00192ea1c27b00b21b5862796a;



Diagnostics:

None

AuxData:

None
